# dmipy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  LICENSING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: api.md  catalog.md  coherence_gated_physics.md  constants.md  design.md  fit.md  index.md  install.md  mesh_substrates.md  migrating.md  pedagogy.md  publications.md  sequences.md  sim.md  substrate.md  surface_relaxivity_bias.md  surface_relaxivity_mwf.md
docs/derivations/: gpa_arbitrary_waveform.md  karger_exchange.md
docs/design/: deliverable.md  pulseq.md  snr.md  spectral.md
docs/design/media/: README.txt  fig_mintte_vs_vanilla.py  fig_ogse_frequency_sweep.py  fig_ogse_pns_deliverability.py  fig_ogse_vanilla_vs_optimized.py
docs/examples/: canonical_wm_parity.md
docs/javascripts/: mathjax.js
docs/physics/: coherence_gating.md  diffusion.md  index.md  magnetization_transfer.md  permeability.md  susceptibility.md
docs/stylesheets/: dmrai.css
docs/validation/: index.md  winther2024.md
licensing/: CLA.md  COMMERCIAL-LICENSE-TEMPLATE.md
papers/: README.md
papers/surface_relaxivity_bias/: README.md  appendix_estimator_comparison.py  main.bbl
papers/surface_relaxivity_bias/figures/: fig_cpmg_mwf_engine.py  fig_cpmg_mwf_engine_data.npz  fig_demyelination_bias.py  gather_real_substrates.py
papers/surface_relaxivity_bias/sections/: abstract.tex  appendix.tex  discussion.tex  introduction.tex  results.tex
papers/surface_relaxivity_mwf/: main.tex  refs.bib
papers/surface_relaxivity_mwf/figures/: fig_crossing_mc.py  fig_demyelination_bias_data.npz  fig_fintra_bias.py  fig_mwf_sv_bias.py  fig_mwf_sv_bias_data.npz  fig_smt_fintra.py  fig_substrate_cross_section.py  rat_sem_crop_meta.npz  real_substrate.py  real_substrates_data.npz
papers/surface_relaxivity_mwf/sections/: conclusion.tex  methods.tex  theory.tex
tests/: test_interop.py
tools/: check_dois.py  gen_catalog.py  gen_constants.py  gen_pedagogy_media.py  gen_sequences.py  gen_substrate.py
