[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dmipy"
version = "1.0.0"
description = "Diffusion Microstructure Imaging in Python — umbrella install for the dmipy-sim (forward Monte Carlo) and dmipy-fit (analytical inverse) engines"
license = { text = "AGPL-3.0-only OR LicenseRef-Commercial" }  # dual-licensed; see LICENSING.md
requires-python = ">=3.10"
dependencies = [
    "dmipy-sim @ git+https://github.com/dmrai-lab/dmipy-sim.git",
    "dmipy-fit @ git+https://github.com/dmrai-lab/dmipy-fit.git",
]

[project.optional-dependencies]
# GPU / CPU JAX for both engines (osqp, a dmipy-fit CSD dep, is pulled by dmipy-fit itself)
cuda12 = ["jax[cuda12]>=0.6.2", "jaxopt>=0.8"]
cpu    = ["jax[cpu]>=0.6.2",    "jaxopt>=0.8"]
# Build the dmipy.org documentation site
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]

[project.urls]
Homepage = "https://dmipy.org"
Source = "https://github.com/dmrai-lab"

# dmipy is a thin umbrella: `pip install dmipy` pulls the two engines
# (dmipy-sim + dmipy-fit). There is no `dmipy` importable package — import
# `dmipy_sim` and `dmipy_fit` directly. This repo also hosts the dmipy.org docs.
