[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dmipy"
version = "2.2.0"
description = "Diffusion Microstructure Imaging in Python — umbrella install for the dmipy-design (sequence design), dmipy-sim (forward Monte Carlo) and dmipy-fit (analytical inverse) engines"
readme = "README.md"
license = { text = "AGPL-3.0-only OR LicenseRef-Commercial" }  # dual-licensed; see LICENSING.md
authors = [
    { name = "Rutger Fick", email = "fick.rutger@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
# Published deps (NOT git+ — PyPI rejects direct references). dmipy-fit already pulls
# dmipy-sim; all three are listed so `pip install dmipy` states the whole ecosystem explicitly.
dependencies = [
    "dmipy-design>=2.0,<3",   # sequence design (deliverable waveforms, Pulseq)
    "dmipy-sim>=2.0,<3",      # forward Monte-Carlo
    "dmipy-fit>=2.0,<3",      # analytical inverse
]

[project.optional-dependencies]
# GPU / CPU JAX for both engines (osqp, a dmipy-fit CSD dep, is pulled by dmipy-fit itself)
cuda12 = ["jax[cuda12]>=0.6.2", "jaxopt>=0.8"]
cpu    = ["jax[cpu]>=0.6.2",    "jaxopt>=0.8"]
# Build the dmipy.org documentation site
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
    "black>=24.0",            # pretty-format autodoc signatures (mkdocstrings)
]
# Ecosystem integration tests: assemble all three engines (pulled by the deps above) and
# check design -> sim -> fit interoperate at these resolved versions.
test = ["pytest>=7", "jax[cpu]>=0.6.2"]

[project.urls]
Homepage = "https://dmipy.org"
Source = "https://github.com/dmrai-lab"

# Meta-package: no importable `dmipy` module, so there is nothing to discover/build.
[tool.setuptools]
py-modules = []

# dmipy is a thin umbrella: `pip install dmipy` pulls the three engines
# (dmipy-design + dmipy-sim + dmipy-fit). There is no `dmipy` importable package — import
# `dmipy_design` / `dmipy_sim` / `dmipy_fit` directly. This repo also hosts the dmipy.org docs.
